--- a/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
@@ -6,9 +6,24 @@
     tools:context=".ForecastFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="123456" />
+        android:orientation="vertical" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/thursday"
+            android:textColor="@color/colorPrimary"
+            android:textSize="36sp" />
+
+        <ImageView
+            android:id="@+id/Imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src= "@drawable/cloud"/>
+
+    </LinearLayout>
 
 </FrameLayout>
