--- a/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_forecast.xml
@@ -3,27 +3,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForecastFragment">
+    tools:context=".ForecastFragment"
+    android:orientation="vertical">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
+        android:background="@android:color/holo_blue_bright"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/days"
+            android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/thursday"
+            android:text="@string/Mon"
             android:textColor="@color/colorPrimary"
-            android:textSize="36sp" />
+            android:textSize="24sp" />
 
         <ImageView
             android:id="@+id/Imageview"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_weight="3"
+            android:src="@drawable/cloud" />
+
+        <LinearLayout
+            android:layout_weight="6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src= "@drawable/cloud"/>
-
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/info"
+                android:layout_weight="1"
+                android:text="@string/info"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"/>
+            <TextView
+                android:id="@+id/temp"
+                android:layout_weight="1"
+                android:text="@string/tempurature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"/>
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
