--- a/USTHWeather/app/src/main/res/layout/activity_weather.xml
+++ b/USTHWeather/app/src/main/res/layout/activity_weather.xml
@@ -7,4 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".WeatherActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
+        <fragment
+            android:id="@+id/secondfragment"
+            android:name="vn.edu.usth.weather.ForecastFragment"
+            android:layout_width="match_parent"
+            android:layout_height="341dp" />
+
+        <fragment
+            android:id="@+id/firstfragment"
+            android:name="vn.edu.usth.weather.ForecastFragment"
+            android:layout_width="match_parent"
+            android:layout_height="263dp" />
+    </LinearLayout>
 </FrameLayout>
