--- a/USTHWeather/app/src/main/res/layout/activity_weather.xml
+++ b/USTHWeather/app/src/main/res/layout/activity_weather.xml
@@ -19,7 +19,14 @@
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/weatherForecastViewPager"
-            android:layout_width="460dp"
-            android:layout_height="594dp" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <com.google.android.material.tabs.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </com.google.android.material.tabs.TabLayout>
+        </androidx.viewpager.widget.ViewPager>
+
     </LinearLayout>
 </FrameLayout>
