--- a/USTHWeather/app/src/main/res/layout/fragment_weather.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_weather.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+    android:background="@android:color/holo_blue_bright"
+    android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="12C                                      Paris"
+        android:text="12C"
         android:textSize="30dp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cloudy"
-        android:textSize="30dp"/>
+        android:textSize="30dp" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/cloud"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:src="@drawable/cloud" />
 
 </LinearLayout>
