--- a/USTHWeather/app/src/main/res/layout/fragment_weather.xml
+++ b/USTHWeather/app/src/main/res/layout/fragment_weather.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/frame_patch">
 
     <TextView
         android:layout_width="match_parent"
